# 2.9.5-NativeAwakening

./: .gitignore  Cargo.toml  QUICK_START.md  README.md  ROADMAP.md  install.sh  native-libs
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
config/: devnet.toml  mainnet.toml
core/: Cargo.toml
core/benches/: mempool.rs
core/src/: lib.rs  load_test.rs  load_test_v2.rs  main.rs  network.rs  security_audit.rs
core/src/algorithms/: blake3_algo.rs  cosmic_harmony.rs  cosmic_harmony_v2.rs  mod.rs  randomx.rs  yescrypt.rs
core/src/blockchain/: GENESIS_MESSAGE.txt  block.rs  block_old.rs  burn.rs  chain.rs  consensus.rs  fee.rs  mod.rs  premine.rs  reorg.rs  reward.rs  validation.rs
core/src/crypto/: hash.rs  keys.rs  mod.rs
core/src/jsonrpc/: mod.rs
core/src/mempool/: eviction.rs  mod.rs  pool.rs
core/src/metrics/: core_metrics.rs  endpoints.rs  mod.rs
core/src/miner/: mod.rs
core/src/p2p/: heartbeat.rs  messages.rs  mod.rs  peers.rs  persistence.rs  security.rs  seeds.rs  sync.rs
core/src/rpc/: auth.rs  methods.rs  mod.rs  server.rs
core/src/state/: mod.rs
core/src/storage/: lmdb.rs  mod.rs
core/src/tx/: mod.rs
core/src/wallet/: batch.rs  mod.rs
core/tests/: chain_consensus.rs  config_validation.rs  sprint_1_2_test_suite.rs  sprint_1_3_ibd_suite.rs  sprint_1_4_payout_suite.rs  sprint_1_9_stress_suite.rs
cosmic-harmony/: Cargo.toml  build.rs
cosmic-harmony/src/: algorithm_library.rs  algorithms.rs  algorithms_opt.rs  config.rs  engine.rs  ffi.rs  lib.rs  modules.rs  native_ffi.rs  ncl_integration.rs  pool_manager.rs  profit_router.rs  revenue.rs  whattomine.rs
cosmic-harmony/src/gpu/: autolykos2_metal_miner.rs  autolykos2_shader.metal  autolykos2_shader.metal.bak_v3_safe  ethash_metal_miner.rs  ethash_shader.metal  gpu_miner.rs  metal_ffi.rs  metal_miner.rs  metal_shader.metal  mod.rs  opencl_kernel.rs
cosmic-harmony/src/multichain/: job_receiver.rs  mod.rs  multi_submitter.rs  work_dispatcher.rs
cosmic-harmony/src/multichain/algorithm_workers/: autolykos_worker.rs  blake3_worker.rs  ethash_worker.rs  kawpow_worker.rs  kheavyhash_worker.rs  mod.rs
docs/: CH3_REVENUE_ARCHITECTURE.md  MAINNET_CONSTITUTION.md  MAINNET_ROADMAP_2026.md  MINING_GUIDE.md
docs/CHv3/: CH3_MULTICHAIN_NATIVE_IMPLEMENTATION.md  CH_V3_FORK_EXPLANATION.md  VICTORY_EXTERNAL_POOLS_2026-02-06.md  VICTORY_KAS_EXTERNAL_MINING_2026-02-06.md
docs/WP3.0/: ZION_PROJECT_OVERVIEW_v2.9.5.md
docs/whitepaper/: 01_VISION_AND_MISSION.md  05_FAIR_LAUNCH.md  06_DAO_GOVERNANCE.md  07_HUMANITARIAN_TITHE.md  full.md
docs/whitepaper-v2.9.5/: 02_TECHNICAL_ARCHITECTURE.md  03_CONSCIOUSNESS_MINING.md  04_ECONOMIC_MODEL.md  05_FAIR_LAUNCH.md  08_NCL_NEURAL_COMPUTE.md  09_ROADMAP.md  10_CONCLUSION.md  README.md  full.md
miner/: Cargo.toml
miner/src/: config.rs  main.rs  telemetry.rs
miner/src/consciousness/: levels.rs  mod.rs
miner/src/miner/: cpu.rs  external_pool.rs  mod.rs  multichain.rs  native_algos.rs  python_fallback.rs  stats.rs  stream_aware.rs
miner/src/miner/gpu/: benchmark.rs  cuda.rs  metal.rs  mod.rs  opencl.rs
miner/src/miner/gpu/kernels/: cosmic_harmony.cl  cosmic_harmony_v3.cl  cosmic_harmony_v3.cu
miner/src/ncl/: mod.rs
miner/src/stratum/: ethstratum.rs  messages.rs  mod.rs
pool/: Cargo.toml
pool/src/: buyback.rs  config.rs  jobs.rs  lib.rs  main.rs  pool_external_miner.rs  profit_switcher.rs  revenue_proxy.rs  session.rs  stream_scheduler.rs  vardiff.rs
pool/src/blockchain/: mod.rs  reward_calculator.rs  rpc_client.rs  template_manager.rs
pool/src/metrics/: mod.rs  prometheus.rs
pool/src/payout/: manager.rs  maturity.rs  mod.rs  scheduler.rs  wallet.rs
pool/src/pplns/: calculator.rs  mod.rs
pool/src/shares/: mod.rs  processor.rs  storage.rs  validator.rs
pool/src/stratum/: connection.rs  connection_v2.rs  mod.rs  protocol.rs  server_v2.rs
tests/: mock_stratum_server.py
