[workspace]
members = [
    "core",
    "pool",
    "miner",
    "cosmic-harmony",
]
resolver = "2"

[workspace.package]
version = "2.9.5"
edition = "2021"
authors = ["ZION Core Team <contact@zionterranova.com>"]
license = "MIT"
repository = "https://github.com/Zion-TerraNova/2.9.5-NativeAwakening"
