[package]
name = "zion-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ZION Blockchain Core - Consensus, P2P, Storage, RPC"

[features]
default = []
dev-tools = []  # Enables dev.credit_balance, dev.set_difficulty — NEVER enable in production

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
ed25519-dalek = "2"
sha2 = "0.10"
ripemd = "0.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
heed = { version = "0.22.0", features = ["serde-bincode"] }
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = "0.4"
rand = "0.8"
rand_chacha = "0.3"
bip39 = { version = "2", features = ["rand"] }
zeroize = "1.7"  # AUDIT-FIX P1-17: Secure memory zeroing for private keys

# Cosmic Harmony v3 PoW algorithm
zion-cosmic-harmony-v3 = { path = "../cosmic-harmony" }

# Algorithm support
once_cell = "1.19"
parking_lot = "0.12"
randomx-rs = "1.2"
scrypt = "0.11"
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
# AUDIT-FIX P1-06: Integration tests need dev-tools to access test-only methods
zion-core = { path = ".", features = ["dev-tools"] }

[[bench]]
name = "validation"
harness = false

[[bench]]
name = "mempool"
harness = false

[[bench]]
name = "chain"
harness = false
